--- a/css/project.css
+++ b/css/project.css
@@ -43,6 +43,10 @@ a.activelink {
   Content Style
 ==================================== */
 
+main {
+    padding: 0 10px;
+}
+
 .box {
     display: flex;
     flex-direction: column;
@@ -98,6 +102,32 @@ a.activelink {
         background: #00296B;
         z-index: 10;
     }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+
+    .box {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 20px 0 10px 0;
+    }
+
+    .projects {
+        flex: 1 0 32%; 
+        max-width: 32%;
+    }
+}
+
+@media (min-width: 1025px) {
+    .projects {
+        min-width: 308px;
+        max-width: 32%;
+        flex: 1 0 23%;
+    }
+}
+
+@media (max-width: 1254px) {
+    .projects {
+        min-width: 47.5%;
+    }
 }
 
 @media (min-width: 1025px) { 
@@ -122,5 +152,4 @@ Style changes in media queries
         border-left: 5px solid #FFD500;
         padding-left: 5px;
     }
-
 }
