--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -64,6 +64,7 @@ main a:-webkit-any-link {
     background: url(../imgs/socialspritesheet.png) no-repeat;
     min-width: 180px; /* width of container */
     height: 180px; /* height of container */
+    margin: 5px;
 }
 
 .tiktok > .sprite {
