--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -210,7 +210,7 @@ main a:-webkit-any-link {
     .head {
         float: left;
         margin-right: 28px;
-        margin-bottom: 20px;
+        margin-bottom: 20px; 
     }
     
     .other-nav {
@@ -219,7 +219,7 @@ main a:-webkit-any-link {
     }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
 
     main {
-        padding: 0 10px;
+        padding: 5px 20px;
     }
 
     .minecraft > div {
