--- a/css/blog.css
+++ b/css/blog.css
@@ -63,6 +63,10 @@ button {
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
 }
 
+.buttons {
+    margin-bottom: 15px;
+}
+
 .post_submit {
     margin-top: 0px;
 }
@@ -75,7 +79,7 @@ button:hover {
 
 
 .post_full {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
     margin: 20px auto;
@@ -96,7 +100,7 @@ button:hover {
 }
 
 .form_full {
-    display: none; /* CHANGE THIS TO DISPLAY: NONE!!! */
+    display: none;
     flex-direction: column;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
     margin: 20px 0;
@@ -168,12 +172,16 @@ textarea {
     button {
         width: 50%;
     }
+
+    button:first-child {
+        margin-right: 20px;
+    }
     .buttons {
         flex-direction: row;
     }
 
     main {
-        padding: 10px 20px;
+        padding: 0 20px;
     }
 
 }
@@ -214,5 +222,6 @@ Style changes in media queries
     button {
         width: 25%;
         margin-right: 10px;
+        margin-top: 15px;
     }
 }
