--- a/css/contact.css
+++ b/css/contact.css
@@ -50,12 +50,20 @@ a.activelink {
     text-align: center;
     border-radius: .2em;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
-    padding: 10px;
+    padding: 20px;
     margin: 0 0 20px 0;
 }
 
+.contact p {
+    display: none;
+}
+
+.contact h2 {
+    margin-bottom: 0;
+}
+
 main {
-    padding: 5px 20px;
+    padding: 20px 20px;
 }
 
 .sprite {
@@ -78,7 +86,23 @@ main {
     }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
 
     main {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         padding: 15px 20px 10px 20px;
+    }
+
+    .contact {
+        flex: 1 0 45%;
+        padding: 25px;
+    }
+
+    .contact p {
+        display: block;
+    }
+
+    .contact:nth-child(2n) {
+        margin-left: 20px;
     }
 }
 
@@ -102,18 +126,7 @@ Style changes in media queries
     }
 
     main {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding: 15px 20px 10px 20px;
-    }
-
-    .contact {
-        flex: 1 0 45%;
-    }
-
-    .contact:nth-child(2n) {
-        margin-left: 20px;
+        padding: 20px 20px 10px 20px;
     }
 
 }
