--- a/css/project.css
+++ b/css/project.css
@@ -44,7 +44,7 @@ a.activelink {
 ==================================== */
 
 main {
-    padding: 10px 20px;
+    padding: 0 20px;
 }
 
 .box {
@@ -58,7 +58,7 @@ main {
     border-radius: .2em;
     border: solid 1px rgba(88, 183, 205, .2);
     border-bottom: solid 2px rgba(88, 183, 205, .2);
-    margin: 5px 4px;
+    margin: 5px 0 18px 0;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
     display: flex;
     flex-direction: column;
@@ -113,6 +113,8 @@ main {
     .projects {
         flex: 1 0 32%; 
         max-width: 32%;
+        margin-right: 5px;
+        margin-left: 5px;
     }
 }
 
@@ -121,12 +123,13 @@ main {
         min-width: 308px;
         max-width: 32%;
         flex: 1 0 23%;
+        
     }
 }
 
 @media (max-width: 1254px) {
     .projects {
-        min-width: 47.5%;
+        min-width: 48%;
     }
 }
 
