--- a/css/blog.css
+++ b/css/blog.css
@@ -84,6 +84,7 @@ button:hover {
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
     margin: 20px auto;
     border-radius: .2em;
+    width: 100%;
 }
 
 .post_head {
