--- a/css/socialmedia.css
+++ b/css/socialmedia.css
@@ -54,6 +54,7 @@ main {
     border-radius: .2em;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
     margin: 20px 0;
+    width: 100%;
 }
 
 main a:-webkit-any-link {
