--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,7 @@ Media Queries
 		width: 100%;
 		justify-content: space-around;
 		font-size: 17px;
+		text-align: center;
 	}
 
 /* ================================= 
