--- a/css/project.css
+++ b/css/project.css
@@ -37,7 +37,7 @@ a.activelink {
     color: #FFD500;
     border-bottom: 3px solid #FFD500;
     padding-bottom: 7px;
-}
+} /* indicates which page the user is on by style changes */
 
 /* ================================= 
   Content Style
