--- a/css/project.css
+++ b/css/project.css
@@ -54,6 +54,12 @@ main {
     margin-top: 10px;
 }
 
+.projectBanner {
+    background-color: #00296B;
+    color: #FDC500;
+    padding: 7px 10px;
+}
+
 .projectDescription {
     text-align: center;
     margin-bottom: 5px;
@@ -63,7 +69,6 @@ main {
 .projects {
     background: #fff;
     border-radius: .2em;
-    border: solid 1px rgba(88, 183, 205, .2);
     border-bottom: solid 2px rgba(88, 183, 205, .2);
     margin: 5px 0 18px 0;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
@@ -123,7 +128,7 @@ main {
 
 .links > .soloprog {
     width: 100%;
-    background: #00296B;
+    background: #00509D;
     color: #FFD500;
     border: 3px solid #FFD500;
     padding: 15px;
